refactored code to use Omitted rather than Default

--- a/force-app/main/default/lwc/sharingTest/sharingTest.html
+++ b/force-app/main/default/lwc/sharingTest/sharingTest.html
@@ -12,7 +12,7 @@
                         <div class="slds-select_container">
                             <select class="slds-select" onchange={handleBaseClassChange}>
                                 <option value="">Select Base Class</option>
-                                <option value="Default">Default Access</option>
+                                <option value="Omitted">Omitted Access</option>
                                 <option value="WithSharing">With Sharing</option>
                                 <option value="WithoutSharing">Without Sharing</option>
                                 <option value="InheritedSharing">Inherited Sharing</option>
@@ -27,7 +27,7 @@
                         <div class="slds-select_container">
                             <select class="slds-select" onchange={handleChildClassChange}>
                                 <option value="">Select Child Class</option>
-                                <option value="DefaultChild">Default Child</option>
+                                <option value="OmittedChild">Omitted Child</option>
                                 <option value="WithSharingChild">With Sharing Child</option>
                                 <option value="WithoutSharingChild">Without Sharing Child</option>
                                 <option value="InheritedSharingChild">Inherited Sharing Child</option>
@@ -42,7 +42,7 @@
                         <div class="slds-select_container">
                             <select class="slds-select" onchange={handleNestedClassChange}>
                                 <option value="">Select Nested Class</option>
-                                <option value="Default">Default Nested</option>
+                                <option value="Omitted">Omitted Nested</option>
                                 <option value="WithSharing">With Sharing Nested</option>
                                 <option value="WithoutSharing">Without Sharing Nested</option>
                                 <option value="InheritedSharing">Inherited Sharing Nested</option>
